pyquest/ql/test/parsing/valid/test012.ql
// Form with computed question
form testForm {
  "Question?"
    var: boolean = "ADSADsad"
}