pyquest/ql/test/parsing/invalid/test018.ql
// Empty if conditional
form testForm {
    if () {
        "Question?"
        id : boolean
    }
}